--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 .body {
   font-family: "Roboto", sans-serif;
@@ -77,4 +78,59 @@
   font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-style: italic;
+}
+
+.hero {
+  position: relative;
+  height: 65vh;
+  width: 100%;
+  background-image: url("/nairobi.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(10, 7, 7, 0));
+  pointer-events: none;
+}
+
+.hero-heading {
+  font-family: "Oswald", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-align: start;
+  margin-top: 0;
+  color: "#ff0000";
+}
+
+.hero-text {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-align: start;
+  margin-bottom: 0;
+}
+
+.hero-title {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-align: start;
+  letter-spacing: 1px;
+}
+
+.hero-sub-text {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.0rem;
+  font-weight: 400;
+  text-align: start;
+  letter-spacing: 1px;
 }
